--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:layout_margin="10dp">
 
-    <Button
-        android:id="@+id/btnRefresh"
+    <!-- Status koneksi -->
+    <TextView
+        android:id="@+id/textViewStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/refresh" />
+        android:text="Status: Disconnected"
+        android:textSize="18sp"
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="16dp" />
 
+    <!-- RecyclerView untuk menampilkan daftar perangkat USB -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDevices"
-        android:layout_below="@id/btnRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Tombol untuk menyegarkan daftar perangkat -->
+    <Button
+        android:id="@+id/btnRefresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/layoutControls" />
+        android:text="Refresh Devices" />
 
+    <!-- Tombol Connect dan Disconnect -->
     <LinearLayout
-        android:id="@+id/layoutControls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:layout_marginTop="16dp">
 
-        <EditText
-            android:id="@+id/txtData"
+        <Button
+            android:id="@+id/buttonConnect"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/type_data_to_send"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:textColorHint="#546E7A"
-            tools:ignore="VisualLintTextFieldSize" />
+            android:text="Connect" />
 
         <Button
-            android:id="@+id/buttonSend"
-            android:layout_width="wrap_content"
+            android:id="@+id/buttonDisconnect"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/send"
-            android:layout_marginEnd="5dp"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <Button
-            android:id="@+id/buttonRead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/read"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:layout_weight="1"
+            android:text="Disconnect"
+            android:enabled="false" />
     </LinearLayout>
 
-</RelativeLayout>
+    <!-- EditText untuk memasukkan data yang ingin dikirim -->
+    <EditText
+        android:id="@+id/txtData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter data to send"
+        android:layout_marginTop="16dp" />
+
+    <!-- Tombol untuk mengirim data -->
+    <Button
+        android:id="@+id/buttonSend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Send Data"
+        android:layout_marginTop="8dp" />
+
+</LinearLayout>
