--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="?android:attr/buttonBarStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,7 +12,7 @@
         android:id="@+id/textViewStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Status: Disconnected"
+        android:text="@string/status_disconnected"
         android:textSize="18sp"
         android:textColor="@android:color/holo_red_dark"
         android:layout_gravity="center_horizontal"
@@ -21,7 +22,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDevices"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:layout_marginBottom="16dp" />
 
     <!-- Tombol untuk menyegarkan daftar perangkat -->
@@ -29,45 +30,31 @@
         android:id="@+id/btnRefresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Refresh Devices" />
+        android:text="@string/refresh_devices" />
 
-    <!-- Tombol Connect dan Disconnect -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp">
-
-        <Button
-            android:id="@+id/buttonConnect"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Connect" />
-
-        <Button
-            android:id="@+id/buttonDisconnect"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Disconnect"
-            android:enabled="false" />
-    </LinearLayout>
-
-    <!-- EditText untuk memasukkan data yang ingin dikirim -->
     <EditText
         android:id="@+id/txtData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter data to send"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:hint="@string/enter_data_to_send"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textColorHint="#546E7A"
+        tools:ignore="Autofill" />
 
-    <!-- Tombol untuk mengirim data -->
     <Button
         android:id="@+id/buttonSend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send Data"
         android:layout_marginTop="8dp" />
+
+    <TextView
+        android:id="@+id/output"
+        android:layout_marginTop="10dp"
+        android:text="@string/output_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
